--- a/serenity.properties
+++ b/serenity.properties
@@ -1,1 +1,12 @@
-webdriver.driver=firefox
+#Для Селеноида
+#serenity.project.name=Web tests.
+#serenity.console.colors=true
+#serenity.logging=VERBOSE
+
+webdriver.driver=chrome
+#webdriver.remote.url=http://172.29.147.226:4444/wd/hub
+
+#serenity.driver.capabilities="browserName:chrome;enableVNC:true;enableVideo:true;"
+
+#chrome.switches="--start-maximized"
+
